# src/modules/cars/models/Specification.ts
@@ -1,19 +1,0 @@
-import { v4 as uuidv4 } from 'uuid';
-
-class Specification {
-    id?: string;
-
-    name: string;
-
-    description: string;
-
-    created_at: Date;
-
-    constructor() {
-        if (!this.id) {
-            this.id = uuidv4();
-        }
-    }
-}
-
-export { Specification };
